# kuksa.val

.github/workflows/: clean-images.yml
clients/feeder/system-monitor-feeder/: Cargo.toml
clients/feeder/system-monitor-feeder/model/: systemstat.json  systemstat.yaml
clients/feeder/system-monitor-feeder/src/: cmdline.yaml  feeder.rs  main.rs
kuksa_databroker/: README.md
kuksa_feeders/dbc2val/: mapping.yml
kuksa_go_client/: go.mod  main.go
