[package]
name = "system-monitor-feeder"
version = "0.1.0"
authors = ["sebastian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
log = "0.4.14"
simplelog = "0.9.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.123"
serde_json = "1.0.61"
systemstat = "0.1.6"
